Revert back to get(0) instead of getFirst() for older Java compatibility